--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <canvas id="drawingCanvas" width="300" height="300"></canvas>
-    <p>Brush size: <input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></p>
-    <p>Brush color: <input id="brushColorSelect" type="color" oninput="setBrushColor()" /></p>
-    <p><a id="downloadLink"><button type="button" name="button">Download drawing</button></a></p>
+    <div class="main-container">
+      <canvas id="drawingCanvas" width="300" height="300"></canvas>
+      <p>Brush size: <input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></p>
+      <p>Brush color: <input id="brushColorSelect" type="color" oninput="setBrushColor()" /></p>
+      <p><a id="downloadLink"><button type="button" name="button">Download drawing</button></a></p>
+    </div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
