--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>rzeczuchyDraw</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <div class="main-container">
-      <canvas id="drawingCanvas" width="300" height="300"></canvas>
-      <p>Brush size: <input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></p>
-      <p>Brush color: <input id="brushColorSelect" type="color" oninput="setBrushColor()" /></p>
-      <p><a id="downloadLink"><button type="button" name="button">Download drawing</button></a></p>
-    </div>
-    <script src="scripts/script.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>rzeczuchyDraw</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <canvas id="drawingCanvas" width="500" height="400"></canvas>
+  <div class="tools-container">
+    <table>
+      <tr>
+        <th>Brush</th>
+        <th></th>
+        <th>Canvas</th>
+        <th></th>
+        <th>History</th>
+        <th>Drawing</th>
+      </tr>
+      <tr>
+        <td>Size:</td>
+        <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" />px</td>
+        <td>Width:</td>
+        <td><input id="canvasWidthSelect" type="number" disabled />px</td>
+        <td><button class="action-button" type="button" name="button" disabled>Undo</button> </td>
+        <td><a id="downloadLink"><button class="action-button" type="button" name="button">Download</button></a></td>
+      </tr>
+      <tr>
+        <td>Color:</td>
+        <td><input id="brushColorSelect" type="color" oninput="setBrushColor()" /></td>
+        <td>Height:</td>
+        <td><input id="canvasHeightSelect" type="number" disabled />px</td>
+        <td><button class="action-button" type="button" name="button" disabled>Redo</button></td>
+        <td><button class="action-button" type="button" name="button" disabled>Clear</button></td>
+      </tr>
+    </table>
+  </div>
+  <div class="footer">
+    <p>coded by <a href="https://github.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.2</p>
+  </div>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
