moving tools above canvas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-  <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="tools-container">
     <table>
       <tr>
@@ -33,12 +32,13 @@
         <td>Height:</td>
         <td><input id="canvasHeightSelect" type="number" disabled />px</td>
         <td><button id="redoButton" class="action-button" type="button" name="button" disabled>Redo</button></td>
-        <td><button id="clearButton" class="action-button" type="button" name="button" onclick="clearCanvas()">Clear (!)</button></td>
+        <td><button id="clearButton" class="action-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
       </tr>
     </table>
   </div>
+  <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="footer">
-    <p>coded by <a href="https://github.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.2</p>
+    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.2</p>
   </div>
   <script src="scripts/script.js"></script>
 </body>
