--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       </tr>
       <tr>
         <td>Size:</td>
-        <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" />px</td>
+        <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></td>
         <td>Width:</td>
-        <td><input id="canvasWidthSelect" type="number" oninput="setCanvasWidth()" />px</td>
+        <td><input id="canvasWidthSelect" type="number" />
+          <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button> </td>
         <td><button id="undoButton" class="action-button" type="button" name="button" disabled>Undo</button> </td>
         <td><a id="saveButton"><button class="action-button" type="button" name="button">Save</button></a></td>
       </tr>
@@ -30,7 +31,8 @@
         <td>Color:</td>
         <td><input id="brushColorSelect" type="color" oninput="setBrushColor()" /></td>
         <td>Height:</td>
-        <td><input id="canvasHeightSelect" type="number" oninput="setCanvasHeight()" />px</td>
+        <td><input id="canvasHeightSelect" type="number" />
+        <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
         <td><button id="redoButton" class="action-button" type="button" name="button" disabled>Redo</button></td>
         <td><button id="clearButton" class="action-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
       </tr>
