clearing canvas to white, UI styles

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <td>Width:</td>
         <td><input id="canvasWidthSelect" type="number" />
           <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button> </td>
-        <td><button id="undoButton" class="action-button" type="button" name="button" disabled>Undo</button> </td>
-        <td><a id="saveButton"><button class="action-button" type="button" name="button">Save</button></a></td>
+        <td><button id="undoButton" class="full-width-button" type="button" name="button" disabled>Undo</button> </td>
+        <td><a id="saveButton"><button class="full-width-button" type="button" name="button">Save</button></a></td>
       </tr>
       <tr>
         <td>Color:</td>
@@ -33,14 +33,14 @@
         <td>Height:</td>
         <td><input id="canvasHeightSelect" type="number" />
         <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
-        <td><button id="redoButton" class="action-button" type="button" name="button" disabled>Redo</button></td>
-        <td><button id="clearButton" class="action-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
+        <td><button id="redoButton" class="full-width-button" type="button" name="button" disabled>Redo</button></td>
+        <td><button id="clearButton" class="full-width-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
       </tr>
     </table>
   </div>
   <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="footer">
-    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.2</p>
+    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.3</p>
   </div>
   <script src="scripts/script.js"></script>
 </body>
