--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <tr>
         <th>Brush</th>
         <th></th>
+        <th></th>
         <th>Canvas</th>
         <th></th>
         <th>History</th>
@@ -21,6 +22,7 @@
       <tr>
         <td>Size:</td>
         <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></td>
+        <td></td>
         <td>Width:</td>
         <td><input id="canvasWidthSelect" type="number" />
           <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button> </td>
@@ -30,6 +32,7 @@
       <tr>
         <td>Color:</td>
         <td><input id="brushColorSelect" type="color" oninput="setBrushColor()" /></td>
+        <td><button id="colorPickerButton" type="button" name="button" onclick="switchToColorPicker()">Pick</button></td>
         <td>Height:</td>
         <td><input id="canvasHeightSelect" type="number" />
         <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
@@ -40,7 +43,7 @@
   </div>
   <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="footer">
-    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.3</p>
+    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.4</p>
   </div>
   <script src="scripts/script.js"></script>
 </body>
