adding round, square brush buttons

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
         <th></th>
         <th>Canvas</th>
         <th></th>
+        <th></th>
         <th>History</th>
         <th>Drawing</th>
       </tr>
       <tr>
         <td>Size:</td>
         <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></td>
-        <td></td>
+        <td><button class="half-width" type="button" name="button" disabled>⚪</button><button class="half-width" type="button" name="button" disabled>◻</button></td>
         <td>Width:</td>
-        <td><input id="canvasWidthSelect" type="number" />
-          <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button> </td>
-        <td><button id="undoButton" class="full-width-button" type="button" name="button" disabled>Undo</button> </td>
+        <td><input id="canvasWidthSelect" type="number" /></td>
+        <td><button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button></td>
+        <td><button id="undoButton" class="full-width-button" type="button" name="button" disabled>Undo</button></td>
         <td><a id="saveButton"><button class="full-width-button" type="button" name="button">Save</button></a></td>
       </tr>
       <tr>
@@ -34,8 +35,8 @@
         <td><input id="brushColorSelect" type="color" oninput="setBrushColor()" /></td>
         <td><button id="colorPickerButton" type="button" name="button" onclick="switchToColorPicker()">Pick</button></td>
         <td>Height:</td>
-        <td><input id="canvasHeightSelect" type="number" />
-        <button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
+        <td><input id="canvasHeightSelect" type="number" /></td>
+        <td><button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
         <td><button id="redoButton" class="full-width-button" type="button" name="button" disabled>Redo</button></td>
         <td><button id="clearButton" class="full-width-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
       </tr>
