--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
       <tr>
         <td>Size:</td>
         <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></td>
-        <td><button class="half-width" type="button" name="button" disabled>⚪</button><button class="half-width" type="button" name="button" disabled>◻</button></td>
+        <td><button class="action-button half-width" type="button" name="button" disabled>⚪</button><button class="action-button half-width" type="button" name="button">◻</button></td>
         <td>Width:</td>
         <td><input id="canvasWidthSelect" type="number" /></td>
-        <td><button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasWidth()">Apply</button></td>
-        <td><button id="undoButton" class="full-width-button" type="button" name="button" onclick="undo()">Undo(z)</button></td>
-        <td><a id="saveButton"><button class="full-width-button" type="button" name="button">Save</button></a></td>
+        <td><button id="applyCanvasWidth" class="action-button" type="button" name="button" onclick="setCanvasWidth()">Apply</button></td>
+        <td><button id="undoButton" class="action-button" type="button" name="button" onclick="undo()">Undo(z)</button></td>
+        <td><a id="saveButton"><button class="action-button" type="button" name="button">Save</button></a></td>
       </tr>
       <tr>
         <td>Color:</td>
         <td><input id="brushColorSelect" type="color" oninput="setBrushColor()" /></td>
-        <td><button id="colorPickerButton" type="button" name="button" onclick="switchToColorPicker()">Pick</button></td>
+        <td><button class="action-button" id="colorPickerButton" type="button" name="button" onclick="switchToColorPicker()">Pick</button></td>
         <td>Height:</td>
         <td><input id="canvasHeightSelect" type="number" /></td>
-        <td><button id="applyCanvasWidth" type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
-        <td><button id="redoButton" class="full-width-button" type="button" name="button" onclick="redo()">Redo(y)</button></td>
-        <td><button id="clearButton" class="full-width-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
+        <td><button id="applyCanvasWidth" class="action-button"  type="button" name="button" onclick="setCanvasHeight()" >Apply</button></td>
+        <td><button id="redoButton" class="action-button" type="button" name="button" onclick="redo()">Redo(y)</button></td>
+        <td><button id="clearButton" class="action-button" type="button" name="button" onclick="clearCanvas()">Clear</button></td>
       </tr>
     </table>
   </div>
   <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="footer">
-    <p>coded by <a href="https://twitter.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.6.1</p>
+    <p>coded by <a href="https://github.com/rzeczuchy/rzeczuchyDraw" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.7</p>
   </div>
   <script src="scripts/script.js"></script>
 </body>
