adding algorithm for strokes, round brush shape

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <tr>
         <td>Size:</td>
         <td><input id="brushSizeSelect" type="number" oninput="setBrushSize()" /></td>
-        <td><button class="action-button half-width" type="button" name="button" onclick="setRoundBrush()" disabled>⚪</button><button class="action-button half-width" type="button" name="button" onclick="setSquareBrush()">◻</button></td>
+        <td><button class="action-button half-width" type="button" name="button" onclick="setRoundBrush()">⚪</button><button class="action-button half-width" type="button" name="button" onclick="setSquareBrush()">◻</button></td>
         <td>Width:</td>
         <td><input id="canvasWidthSelect" type="number" /></td>
         <td><button id="applyCanvasWidth" class="action-button" type="button" name="button" onclick="setCanvasWidth()">Apply</button></td>
@@ -44,7 +44,7 @@
   </div>
   <canvas id="drawingCanvas" width="500" height="400"></canvas>
   <div class="footer">
-    <p>coded by <a href="https://github.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.8</p>
+    <p>coded by <a href="https://github.com/rzeczuchy" target="_blank" rel="noopener noreferrer">rzeczuchy</a> (2020) ver 0.9</p>
   </div>
   <script src="scripts/script.js"></script>
 </body>
