adding secure typing with ts

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           rel="noopener noreferrer"
           >rzeczuchy</a
         >
-        (2020) ver 1.0
+        2020 ver 1.1
       </p>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
