reordering tools, ui improvements

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <main>
       <div class="container">
         <div class="tools-grid">
-          <div class="brush-label">Brush</div>
-          <div class="canvas-label">Canvas</div>
-          <div class="history-label">History</div>
-          <div class="drawing-label">Drawing</div>
-          <div class="size-label">Size:</div>
+          <div class="brush-label heading">Brush</div>
+          <div class="color-label heading">Color</div>
+          <div class="canvas-label heading">Canvas</div>
+          <div class="history-label heading">History</div>
+          <div class="drawing-label heading">Drawing</div>
+          <div class="size-label label">Size:</div>
           <div class="size-input">
             <input
               id="brushSizeSelect"
@@ -61,7 +62,7 @@
               ◻
             </button>
           </div>
-          <div class="width-label">Width:</div>
+          <div class="width-label label">Width:</div>
           <div class="width-select">
             <input id="canvasWidthSelect" type="number" />
           </div>
@@ -92,7 +93,7 @@
               ><button class="btn" type="button" name="button">Save</button></a
             >
           </div>
-          <div class="color-label">Color:</div>
+          <div class="shape-label label">Shape:</div>
           <div class="color-select">
             <input
               id="brushColorSelect"
@@ -111,7 +112,7 @@
               Pick
             </button>
           </div>
-          <div class="height-label">Height:</div>
+          <div class="height-label label">Height:</div>
           <div class="height-select">
             <input id="canvasHeightSelect" type="number" />
           </div>
@@ -167,7 +168,7 @@
             rel="noopener noreferrer"
             >rzeczuchy</a
           >
-          2020 ver 1.2.2
+          2020 ver 1.2.3
         </p>
       </div>
     </footer>
